apps/base/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Linkwarden
    gethomepage.dev/description: Bookmarks
    gethomepage.dev/group: Cloud & Auth
    gethomepage.dev/icon: linkwarden.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkwarden.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: linkwarden.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  number: 3000
